# prs-calculator

./: .gitignore  PRS_Analysis.ipynb  PRS_Methodology_Demonstration.ipynb  PRS_Methodology_Experiment.ipynb  PRS_Methodology_Technical_Report_v2.docx  PRS_Methodology_Technical_Report_v7.md  README.md  cell_reference_map.json  main.py  pyproject.toml  regenerate_csv.py  samplesheet.csv
docs/: PGSC_CALC_QUICKSTART.md  PGS_SETUP_GUIDE.md  PRS_METHODOLOGY_COMPARISON.md  WEB_APP_CONTEXT.md  population_normalization_status.md
results/: pgsc_calc_comparison.csv  prs_normalized_ancestry.csv  prs_summary.csv
results/methodology_comparison/: bias_summary_for_report.csv  comparison_summary.csv  comprehensive_bias_analysis.csv
results/pgsc_calc/: pop_summary.csv  report.html
results/pgsc_calc/match/: trent_summary.csv  versions.yml
results/pgsc_calc/score/: report.html  versions.yml
results/pgsc_calc_cad_comparison/trent/match/: trent_summary.csv  versions.yml
src/: pgs_calculator.py
