[project]
name = "prs"
version = "0.1.0"
description = "Polygenic Risk Score calculator for personal genomic analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "requests>=2.32.5",
]

[project.optional-dependencies]
analysis = [
    "cyvcf2>=0.31.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pysam>=0.23.3",
    "seaborn>=0.13.2",
]
